--- a/index.html
+++ b/index.html
@@ -122,17 +122,19 @@
                         <img id="pizdecCustomImage" class="media-object" width="200px" src="img/voltmeter_empty_650_490.png" alt="...">
                     </span>
                     <div class="media-body">
-                        <h4 class="media-heading">Ваш личный пиздецометр</h4>
+                        <h4 class="media-heading">
+                            <span class="glyphicon glyphicon-info-sign"></span>
+                            Ваш личный пиздецометр</h4>
                         <div class="media">
                             <p class="text-p">
-                                Поздравляем!
+                                <span id="messageFirst">Поздравляем!</span>
                                 <span id="messageBefore">В вашей жизни</span>
                                 <span id="messageAdd"></span>
                                 <strong id="messageType" class="text-strong">полный пиздец</strong> !
                                 <span id="messageAfter"></span>
                                 <span id="messageLast">Это очень хорошо. Или нет. Нам все равно.</span>
                             </p>
-                            <p class="text-p">Расскажите же скорее всем об этом:</p>
+                            <p class="text-p"><span class="glyphicon glyphicon-share-alt"></span> Расскажите же скорее всем об этом:</p>
 
 
                             <div class="pluso" data-background="transparent" data-options="medium,square,line,horizontal,counter,theme=05" data-services="facebook,twitter,vkontakte,google,livejournal,odnoklassniki" data-user="1262715342"></div>
